--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-matplotlib
-scikit-learn
-jupyter
-nbformat
+numpy>=1.21.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
+matplotlib>=3.5.0
+jupyter>=1.0.0
+ipython>=7.0.0
